Experimentos com cacheamento